<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_6">

    <ProgressBar
        android:id="@+id/id_progress_bar_news"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_gravity="center" />


    <FrameLayout
        android:id="@+id/id_frame_news"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:layout_marginTop="24dp"
        android:background="@null" />

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@android:color/black">


        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/id_collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"

            app:layout_scrollFlags="scroll|snap">

            <LinearLayout
                android:id="@+id/linearLayout"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:orientation="horizontal"
                app:layout_scrollFlags="scroll|snap">

                <RelativeLayout
                    android:id="@+id/id_down_item_smila"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardUseCompatPadding="true">

                        <ProgressBar
                            android:visibility="invisible"
                            android:id="@+id/id_progress_bar_smila"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="4dp" />


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/smila"
                            android:textColor="@android:color/black" />

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/id_down_item_cherkassy"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardUseCompatPadding="true">

                        <ProgressBar
                            android:visibility="invisible"
                            android:id="@+id/id_progress_bar_cherkassy"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/cherkassy"
                            android:textColor="@android:color/black" />

                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/id_down_item_ukr"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardUseCompatPadding="true">

                        <ProgressBar
                            android:visibility="invisible"
                            android:id="@+id/id_progress_bar_ukraine"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/ukraine"
                            android:textColor="@android:color/black" />
                    </android.support.v7.widget.CardView>

                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/id_down_item_world"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <android.support.v7.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        app:cardUseCompatPadding="true">

                        <ProgressBar
                            android:visibility="invisible"
                            android:id="@+id/id_progress_bar_world"
                            android:layout_width="15dp"
                            android:layout_height="15dp"
                            android:layout_gravity="center_horizontal"
                            android:layout_marginTop="4dp" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/world"
                            android:textColor="@android:color/black" />
                    </android.support.v7.widget.CardView>

                </RelativeLayout>

            </LinearLayout>


        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@android:color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        app:layout_collapseMode="parallax"
        app:layout_scrollFlags="scroll|snap">

        <LinearLayout
            android:baselineAligned="false"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal">

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/id_check_box_smila_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:buttonTint="@color/textBackgroundButtonNews" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/id_check_box_cherkassy_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:buttonTint="@color/textBackgroundButtonNews" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/id_check_box_ukraine_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:buttonTint="@color/textBackgroundButtonNews" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1">

                <android.support.v7.widget.AppCompatCheckBox
                    android:id="@+id/id_check_box_world_sub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    app:buttonTint="@color/textBackgroundButtonNews" />

            </RelativeLayout>


        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="8dp"
            android:text="@string/notification"
            android:textSize="16sp" />

    </RelativeLayout>


</android.support.design.widget.CoordinatorLayout>